@@ -165,7 +165,7 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
                 .toList();
             return switch (timeSeries.size()) {
                 case 0 -> Optional.empty();
-                case 1 -> Optional.of(timeSeries.get(0));
+                case 1 -> Optional.of(timeSeries.getFirst());
                 default -> throw new PowsyblException("Found more than one timeseries");
             };
         }
@@ -179,23 +179,6 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
     @Override
     public void removeListener(TimeSeriesStoreListener timeSeriesStoreListener) {
         throw new NotImplementedException("Not impletemented");
-    }
-
-    /**
-     * Import a list of TimeSeries in the current FileSystemTimeSeriesStore
-     * @deprecated use {@link #importTimeSeries(List, int, ExistingFilePolicy)} instead
-     */
-    @Deprecated(since = "2.3.0")
-    public void importTimeSeries(List<TimeSeries> timeSeriesList, int version, boolean overwriteExisting, boolean append) {
-        ExistingFilePolicy existingFilePolicy;
-        if (append) {
-            existingFilePolicy = ExistingFilePolicy.APPEND;
-        } else if (overwriteExisting) {
-            existingFilePolicy = ExistingFilePolicy.OVERWRITE;
-        } else {
-            existingFilePolicy = ExistingFilePolicy.THROW_EXCEPTION;
-        }
-        importTimeSeries(timeSeriesList, version, existingFilePolicy);
     }
 
     /**
@@ -241,7 +224,7 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
                 if (existingTsList.size() != 1) {
                     throw new PowsyblException("Existing ts file should contain one and only one ts");
                 }
-                TimeSeries existingTs = existingTsList.get(0);
+                TimeSeries existingTs = existingTsList.getFirst();
 
                 // You cannot append to an infinite TimeSeries
                 if (InfiniteTimeSeriesIndex.INSTANCE.getType().equals(existingTs.getMetadata().getIndex().getType())
@@ -418,8 +401,7 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
     private boolean compareSpacingWithDurationBetweenIndexes(RegularTimeSeriesIndex firstIndex, RegularTimeSeriesIndex lastIndex) {
         return Duration.between(
                 firstIndex.getInstantAt(firstIndex.getPointCount() - 1),
-                lastIndex.getInstantAt(0))
-            .toMillis() == firstIndex.getSpacing();
+                lastIndex.getInstantAt(0)).equals(firstIndex.getTimeStep());
     }
 
     /**
@@ -431,30 +413,21 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
 
     private TimeSeriesIndex appendTimeSeriesIndex(TimeSeriesIndex existingIndex, TimeSeriesIndex newIndex, boolean existingComesFirst) {
         if (existingIndex instanceof RegularTimeSeriesIndex regularExistingTimeSeriesIndex && newIndex instanceof RegularTimeSeriesIndex regularNewTimeSeriesIndex
-            && regularExistingTimeSeriesIndex.getSpacing() == regularNewTimeSeriesIndex.getSpacing()
+            && regularExistingTimeSeriesIndex.getTimeStep().equals(regularNewTimeSeriesIndex.getTimeStep())
             && (existingComesFirst && compareSpacingWithDurationBetweenIndexes(regularExistingTimeSeriesIndex, regularNewTimeSeriesIndex)
             || !existingComesFirst && compareSpacingWithDurationBetweenIndexes(regularNewTimeSeriesIndex, regularExistingTimeSeriesIndex))) {
             // If both indexes are regular, both spacing are equals and the space between the first and the second index is equal to the spacing, the updated index is also regular
             return existingComesFirst ?
-                new RegularTimeSeriesIndex(regularExistingTimeSeriesIndex.getStartTime(), regularNewTimeSeriesIndex.getEndTime(), regularExistingTimeSeriesIndex.getSpacing()) :
-                new RegularTimeSeriesIndex(regularNewTimeSeriesIndex.getStartTime(), regularExistingTimeSeriesIndex.getEndTime(), regularExistingTimeSeriesIndex.getSpacing());
+                new RegularTimeSeriesIndex(regularExistingTimeSeriesIndex.getStartInstant(), regularNewTimeSeriesIndex.getEndInstant(), regularExistingTimeSeriesIndex.getTimeStep()) :
+                new RegularTimeSeriesIndex(regularNewTimeSeriesIndex.getStartInstant(), regularExistingTimeSeriesIndex.getEndInstant(), regularExistingTimeSeriesIndex.getTimeStep());
         } else {
             // Else the index is irregular
+
             return new IrregularTimeSeriesIndex(existingComesFirst ?
-                LongStream.concat(extractTimesFromIndex(existingIndex), extractTimesFromIndex(newIndex)).toArray() :
-                LongStream.concat(extractTimesFromIndex(newIndex), extractTimesFromIndex(existingIndex)).toArray()
+                Stream.concat(existingIndex.stream(), newIndex.stream()).toArray(Instant[]::new) :
+                Stream.concat(newIndex.stream(), existingIndex.stream()).toArray(Instant[]::new)
             );
         }
-    }
-
-    /**
-     * Import a list of TimeSeries in the current FileSystemTimeSeriesStore
-     * @deprecated use {@link #importTimeSeries(BufferedReader, ExistingFilePolicy)}  instead
-     */
-    @Deprecated(since = "2.3.0")
-    public void importTimeSeries(BufferedReader reader, boolean overwriteExisting, boolean append) {
-        Map<Integer, List<TimeSeries>> integerListMap = TimeSeries.parseCsv(reader, new TimeSeriesCsvConfig());
-        integerListMap.forEach((key, value) -> importTimeSeries(value, key, overwriteExisting, append));
     }
 
     /**
@@ -489,7 +462,7 @@ public class FileSystemTimeSeriesStore implements ReadOnlyTimeSeriesStore {
                 .map(TimeSeries::parseJson)
                 .map(tsList -> {
                     if (tsList.size() == 1) {
-                        return tsList.get(0).getMetadata();
+                        return tsList.getFirst().getMetadata();
                     }
                     throw new PowsyblException("Invalid timeseries resource count");
                 })
